trunk/Archive2/38/df68cb4d6c358a/output
main.cpp: In function 'std::ostream& operator<<(std::ostream&, const std::vector<T>&)':
main.cpp:9:6: error: expected primary-expression before '=' token
     {=tdstd 
      ^
main.cpp:9:7: error: 'tdstd' was not declared in this scope
     {=tdstd 
       ^
main.cpp:9:7: error: expected ';' at end of input
main.cpp:9:7: error: expected '}' at end of input
main.cpp:9:7: error: expected '}' at end of input
main.cpp:9:7: warning: no return statement in function returning non-void [-Wreturn-type]
